--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+#root,
 html,
 body {
+    height: 100%;
+    width: 100%;
     background-color: #f7f7f7;
 }
