--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,17 +11,23 @@
 
   /** Typography */
 
-  html, body, #app, .bg-default {
+  html, body, #app, {
     @apply bg-slate-50;
   }
-  #app.dark, .dark .bg-default {
-    background-color: #1F1D36;
+  #app.dark {
+    background-color: #2F2A46;
   }
-   html, body, #app, .text-default {
+  html, body, #app, .text-default {
     @apply text-slate-700;
   }
   #app.dark, .dark .text-default {
     @apply text-slate-50;
+  }
+  .bg-default {
+    @apply bg-white;
+  }
+  .dark .bg-default {
+    background-color: #242136;
   }
 
   h1,
@@ -59,50 +65,11 @@
   }
 
   .highlight {
-    @apply bg-yellow-300;
+    @apply bg-cyan-200;
   }
   .dark .highlight {
-    @apply bg-yellow-700;
+    @apply bg-cyan-800;
   }
-
-.highlight{
-  position:relative;
-}
-.highlight:before{
-  content:"";
-  z-index:-1;
-  left:-0.5em;
-  top:-0.1em;
-  border-width:2px;
-  border-style:solid;
-  border-color:#ef8c22;
-  position:absolute;
-  border-right-color:transparent;
-  width:100%;
-  height:1em;
-  transform:rotate(2deg);
-  opacity:0.7;
-  border-radius:50%;
-  padding:0.1em 0.25em;
-}
-.highlight:after{
-  content:"";
-  z-index:-1;
-  left:-0.5em;
-  top:0.1em;
-  padding:0.1em 0.25em;
-  border-width:2px;
-  border-style:solid;
-  border-color:#ef8c22;
-  border-left-color:transparent;
-  border-top-color:transparent;
-  position:absolute;
-  width:100%;
-  height:1em;
-  transform:rotate(-1deg);
-  opacity:0.7;
-  border-radius:50%;
-}
 
   a {
     cursor: pointer;
